--- a/app/src/main/res/layout/custom_title_view.xml
+++ b/app/src/main/res/layout/custom_title_view.xml
@@ -4,29 +4,43 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/stackShadeTitleTextView"
+    <android.support.v7.widget.CardView
+        android:id="@+id/stackShadeTitleTextViewCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:padding="8dp"
-        android:text="Color Value"
-        android:textColor="@color/blue5"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:visibility="visible" />
+        android:layout_gravity="center_vertical">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:elevation="12dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:elevation="12dp"
+                android:scaleType="centerCrop" />
+
+            <TextView
+                android:id="@+id/stackShadeTitleTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Color Value"
+                android:textColor="@color/blue5"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:visibility="visible" />
+
+        </FrameLayout>
+
+    </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
         android:id="@+id/colorValueDialogTVCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|top">
+        android:layout_gravity="center_vertical">
 
         <TextView
             android:id="@+id/colorValueDialogTextView"
@@ -35,10 +49,11 @@
             android:layout_below="@+id/imageView"
             android:layout_centerHorizontal="true"
             android:layout_margin="4dp"
+            android:elevation="12dp"
             android:gravity="center"
             android:padding="4dp"
             android:text="COLOR VALUE"
-            android:textColor="@color/grey_9"
+            android:textColor="@color/white"
             android:textStyle="bold"
             android:visibility="visible" />
 
