--- a/app/src/main/res/layout/shades_layout_row.xml
+++ b/app/src/main/res/layout/shades_layout_row.xml
@@ -62,8 +62,6 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:padding="4dp"
                 android:text="Color Value"
                 android:textColor="@color/grey_11"
                 android:textSize="18dp"
@@ -77,11 +75,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:gravity="center_horizontal|top"
+                android:gravity="center_horizontal"
                 android:padding="4dp"
                 android:text="Color Value"
                 android:textColor="@color/white"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 android:visibility="visible" />
 
